# resume_builder

./: .gitignore  LICENSE  README.md  pyproject.toml  rice_resume.tex  runner.py
builder/: document.py  runner.py
builder/sections/: __init__.py  base.py  education.py  experience.py  header.py  projects.py  skills.py
builder/utils/: const.py  formatting.py
template/tex_example/: cv.tex  styling.cls
template/yaml_input/: template.yaml
