[tool.poetry]
name = "resume-builder"
version = "0.1.0"
description = "YAML interface to easily create and manipulate preset LaTeX format"
authors = ["Aaren Rice <aaren.rice@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
